--- a/database-systems/project/views/billingCycle.ejs
+++ b/database-systems/project/views/billingCycle.ejs
@@ -72,7 +72,7 @@
         const result = await response.json();
         if (result.success) {
           document.getElementById('status-message').innerText = 'Billing Cycle başarıyla oluşturuldu!';
-          setTimeout(() => location.reload(), 2000); // 2 saniye sonra sayfa yenilenir
+          setTimeout(() => location.reload(), 2000);
         } else {
           document.getElementById('status-message').innerText = 'Hata oluştu: ' + result.message;
         }
