--- a/database-systems/project/views/staff.ejs
+++ b/database-systems/project/views/staff.ejs
@@ -89,7 +89,7 @@
       <% data.forEach(row => { %>
         <tr>
           <% Object.values(row).forEach(value => { %>
-            <td><%= value || '-' %></td> <!-- Boş değerler için "-" koyar -->
+            <td><%= value || '-' %></td>
           <% }) %>
         </tr>
       <% }) %>
